// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a full image set properly 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 26px;
  padding-bottom: 8px;
}

.c7 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
}

.c8 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 16px;
  padding-left: 20px;
}

.c9 {
  height: 45px;
  position: relative;
  margin-left: 40px;
  text-align: right;
}

.c9 > svg {
  height: 98%;
}

.c2 {
  padding: 20px;
  width: 100%;
}

.c0 {
  position: relative;
  width: 100%;
}

.c1 {
  position: absolute;
  bottom: 20px;
  left: 20px;
  min-height: 50px;
  width: auto;
  max-width: calc(100% - 80px);
  border-radius: 2px;
  background: rgba(255,255,255,0.8);
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
  cursor: pointer;
}

.c1:hover {
  background: rgba(0,0,0,0.6);
  color: white;
}

.c1:hover path,
.c1:hover polygon {
  fill: white;
}

.c10 {
  height: auto;
  width: 100%;
}

@media screen and (min-width:40em) {
  .c5 {
    font-size: 18px;
  }
}

@media screen and (min-width:40em) {
  .c5 {
    line-height: 30px;
  }
}

@media screen and (min-width:40em) {
  .c7 {
    font-size: 14px;
  }
}

@media screen and (min-width:40em) {
  .c7 {
    line-height: 24px;
  }
}

@media screen and (min-width:40em) {
  .c8 {
    font-size: 14px;
  }
}

@media screen and (min-width:40em) {
  .c8 {
    line-height: 24px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2 c3"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
          fontFamily={
            Object {
              "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
              "fontWeight": 500,
            }
          }
          fontSize={
            Array [
              "16px",
              "18px",
            ]
          }
        >
          The Work of Bruce M. Sherman
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
            fontFamily={
              Object {
                "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                "fontWeight": 500,
              }
            }
            fontSize={
              Array [
                "12px",
                "14px",
              ]
            }
          >
            View Slideshow
          </div>
          <div
            className="c8"
            fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
            fontSize={
              Array [
                "12px",
                "14px",
              ]
            }
          >
            3 Images
          </div>
        </div>
      </div>
      <div
        className="rrm-container rrm-greaterThanOrEqual-sm"
      >
        <div
          className="c9"
        >
          <svg
            className="image-set"
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
              transform="translate(-6728.67 -507.72)"
            />
            <polygon
              points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
            />
            <polygon
              points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <img
    alt="The Work of Bruce M. Sherman"
    className="c10"
    src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F0aRUvnVgQKbQk5dj8xcCAg%2Flarger.jpg&width=800&quality=80"
  />
</div>
`;

exports[`renders a mini image set properly 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 26px;
  padding-bottom: 8px;
}

.c10 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
}

.c11 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 16px;
  padding-left: 20px;
}

.c12 {
  height: 45px;
  position: relative;
  margin-left: 40px;
  text-align: right;
}

.c12 > svg {
  height: 98%;
}

.c5 {
  padding: 20px;
  width: 100%;
}

.c0 {
  position: relative;
  width: 100%;
}

.c4 {
  height: auto;
  width: 100%;
}

.c1 {
  height: 100px;
  padding: 10px 0 10px 10px;
  border: 1px solid #E5E5E5;
  cursor: pointer;
}

.c1 .c3 {
  height: 100%;
  width: auto;
}

@media screen and (min-width:40em) {
  .c8 {
    font-size: 18px;
  }
}

@media screen and (min-width:40em) {
  .c8 {
    line-height: 30px;
  }
}

@media screen and (min-width:40em) {
  .c10 {
    font-size: 14px;
  }
}

@media screen and (min-width:40em) {
  .c10 {
    line-height: 24px;
  }
}

@media screen and (min-width:40em) {
  .c11 {
    font-size: 14px;
  }
}

@media screen and (min-width:40em) {
  .c11 {
    line-height: 24px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    onClick={[Function]}
  >
    <img
      alt="The Work of Bruce M. Sherman"
      className="c3 c4"
      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F0aRUvnVgQKbQk5dj8xcCAg%2Flarger.jpg&width=200&quality=80"
    />
    <div
      className="c5 c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          fontFamily={
            Object {
              "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
              "fontWeight": 500,
            }
          }
          fontSize={
            Array [
              "16px",
              "18px",
            ]
          }
        >
          The Work of Bruce M. Sherman
        </div>
        <div
          className="c9"
        >
          <div
            className="c10"
            fontFamily={
              Object {
                "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                "fontWeight": 500,
              }
            }
            fontSize={
              Array [
                "12px",
                "14px",
              ]
            }
          >
            View Slideshow
          </div>
          <div
            className="c11"
            fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
            fontSize={
              Array [
                "12px",
                "14px",
              ]
            }
          >
            3 Images
          </div>
        </div>
      </div>
      <div
        className="rrm-container rrm-greaterThanOrEqual-sm"
      >
        <div
          className="c12"
        >
          <svg
            className="image-set"
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
              transform="translate(-6728.67 -507.72)"
            />
            <polygon
              points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
            />
            <polygon
              points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
